--- a/app/src/main/res/layout/activity_delivery_detail.xml
+++ b/app/src/main/res/layout/activity_delivery_detail.xml
@@ -217,6 +217,58 @@
                         tools:ignore="KeyboardInaccessibleWidget" />
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <LinearLayout
+                    android:id="@+id/rcv_status_box"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
+                    android:visibility="gone"
+                    android:background="@drawable/white_background"
+                    android:weightSum="5">
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Delivery Receiving Status"
+                            android:textColor="@color/font_color_main"
+                            android:textStyle="bold"
+                            android:paddingTop="2dp"
+                            android:textSize="12sp"
+                            android:textAlignment="center"
+                            />
+
+                        <TextView
+                            android:id="@+id/rcv_status_txt"
+                            android:textAlignment="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="NOT RECEIVED"
+                            android:textColor="@color/font_color_main"
+                            android:textStyle="bold"
+                            android:textSize="16sp"
+                            />
+
+                    </LinearLayout>
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/delivery_ack"
+                        android:background="@drawable/yellow_background"
+                        app:backgroundTint="@null"
+                        android:layout_width="0dp"
+                        android:text="Receive"
+                        android:onClick="@{()->activity.doReceivingDialog()}"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"/>
+                </LinearLayout>
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/order_list_layout"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
@@ -290,22 +342,6 @@
 
                     </androidx.recyclerview.widget.RecyclerView>
                 </LinearLayout>
-                <Button
-                    android:id="@+id/order_approve"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Receive DO"
-                    android:onClick="@{()->activity.doReceivingDialog()}"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10sp"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/text_size_1"
-                    android:layout_margin="10dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:backgroundTint="@android:color/holo_green_dark"
-                    />
             </LinearLayout>
 
 
