--- a/app/src/main/res/layout/dialog_delivery_acknowledge.xml
+++ b/app/src/main/res/layout/dialog_delivery_acknowledge.xml
@@ -2,9 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="android.view.View"/>
         <variable
             name="vm"
             type="com.akg.akg_sales.view.dialog.DeliveryAcknowledgeDialog" />
+
+        <variable
+            name="editable"
+            type="Boolean" />
     </data>
 
 
@@ -50,7 +55,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="10sp"
-                android:layout_marginBottom="10sp"
                 android:weightSum="10">
                 <TextView
                     android:layout_width="0dp"
@@ -67,6 +71,84 @@
                     android:textColor="@color/font_color_main"
                     android:textSize="@dimen/text_size_1"
                     android:layout_weight="6.5"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:visibility="@{editable?View.GONE:View.VISIBLE}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10sp"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1"
+                        android:text="Rcv Time:"
+                        android:textStyle="bold"
+                        android:layout_weight="3.5"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:text="@{vm.deliveryAckRequestHeader.formattedReceivingTime}"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1"
+                        android:layout_weight="6.5"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10sp"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1"
+                        android:text="Sys Time:"
+                        android:textStyle="bold"
+                        android:layout_weight="3.5"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:text="@{vm.deliveryAckRequestHeader.formattedCreationTime}"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1"
+                        android:layout_weight="6.5"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="10sp"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1"
+                        android:text="Comment:"
+                        android:textStyle="bold"
+                        android:layout_weight="3.5"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:text="@{vm.deliveryAckRequestHeader.comment}"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1"
+                        android:layout_weight="6.5"/>
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -148,86 +230,133 @@
             </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:clickable="true"
-                android:focusable="false"
-                android:hint="Receiving Time">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/receiving_time"
-                    android:inputType="none"
-                    android:focusable="false"
-                    android:onClick="@{()->vm.onClickReceivingTime()}"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/comment_container"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="Comment (Optional)">
+                >
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/comment_field"
+                    android:id="@+id/mismatch_summary"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textNoSuggestions"
-                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789.,!@#$%-_=+?:;[]()/ "
-                    android:maxLength="250"
-                    />
+                    android:enabled="false"
+                    android:focusable="false"
+                    android:textSize="14sp"
+                    android:textColor="@color/font_color_main" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
+            <LinearLayout
+                android:visibility="@{editable?View.GONE:View.VISIBLE}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:hint="Attachment (Optional)">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/attachment"
-                    android:layout_width="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:focusable="false"
-                    android:drawableEnd="@android:drawable/ic_menu_report_image"
+                    android:layout_marginTop="10dp"
+                    android:text="Attachment"
                     android:textColor="@color/font_color_main"
-                    android:textSize="@dimen/text_size_1" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:textSize="@dimen/text_size_1"
+                    android:textStyle="bold"
+                    />
 
+                <ImageView
+                    android:paddingTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/attachment_view" />
+            </LinearLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
+                android:visibility="@{editable?View.VISIBLE:View.GONE}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="300dp">
+                android:orientation="vertical">
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:visibility="gone"
+                    android:clickable="true"
+                    android:focusable="false"
+                    android:hint="Receiving Time">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/receiving_time"
+                        android:inputType="none"
+                        android:focusable="false"
+                        android:onClick="@{()->vm.onClickReceivingTime()}"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
-                android:backgroundTint="#e6e3dc"
-                android:paddingStart="20dp"
-                android:paddingTop="10dp"
-                android:paddingEnd="20dp"
-                android:paddingBottom="10dp"
-                android:text="Submit"
-                android:textColor="@color/dark_green"
-                android:textSize="@dimen/text_size_1"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/comment_container"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Comment (Optional)">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/comment_field"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textNoSuggestions"
+                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789.,!@#$%-_=+?:;[]()/ "
+                        android:maxLength="250"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:hint="Attachment (Optional)">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/attachment"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:focusable="false"
+                        android:onClick="@{()->vm.onClickAttachment()}"
+                        android:drawableEnd="@android:drawable/ic_menu_report_image"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="300dp">
+
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginEnd="32dp"
+                        android:backgroundTint="#e6e3dc"
+                        android:paddingStart="20dp"
+                        android:paddingTop="10dp"
+                        android:paddingEnd="20dp"
+                        android:paddingBottom="10dp"
+                        android:text="Submit"
+                        android:onClick="@{()->vm.submitAcknowledgement()}"
+                        android:textColor="@color/dark_green"
+                        android:textSize="@dimen/text_size_1"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
