--- a/app/src/main/res/layout/activity_delivery_detail.xml
+++ b/app/src/main/res/layout/activity_delivery_detail.xml
@@ -95,7 +95,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/font_color_main"
                             android:textSize="@dimen/text_size_1"
-                            android:text="Move No:"
+                            android:text="Move Ord:"
                             android:textStyle="bold"
                             android:layout_weight="4"/>
                         <TextView
