--- a/app/src/main/res/layout/dialog_delivery_acknowledge.xml
+++ b/app/src/main/res/layout/dialog_delivery_acknowledge.xml
@@ -107,6 +107,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_marginTop="10sp"
+                    android:visibility="gone"
                     android:weightSum="10">
                     <TextView
                         android:layout_width="0dp"
